# ros2_ws

./: README.md
install/: local_setup.sh  setup.sh
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh  package.xml
install/turtle_catch_all_interfaces/share/turtle_catch_all_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  add_two_ints_client_oop.py  add_two_ints_server.py  battery.py  hardware_status_publisher.py  led_panel.py  number_publisher.py
src/my_robot_bringup/config/: radio_config.yaml
src/my_robot_interfaces/: CMakeLists.txt
src/turtle_catch_all_interfaces/: CMakeLists.txt  package.xml
src/turtle_mine_bringup/: CMakeLists.txt
src/turtle_mine_bringup/config/: catch_them_all_config.yaml
src/turtle_mine_bringup/launch/: turtlesim_catch_them_all.launch.xml
src/turtlesim_catch_them_all/: setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
yaml_params/: number_params.yaml
(+128 files in other folders)
